--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
   padding-right: 0;
   padding-bottom: 0;
   padding-left: 40px;
+  border-radius: 5px;
 }
 
 h1 {
@@ -48,7 +49,7 @@ h2 {
   font-size: 20px;
   font-weight: 200;
   margin-top: 10px;
-  margin-bottom: 35px;
+  margin-bottom: 45px;
 }
 
 button {
@@ -77,10 +78,25 @@ input {
   height: 39px;
   border-radius: 5px;
   margin-right: 30px;
+  margin-bottom: 25px;
+}
+
+#text1 {
+  color: var(--text-color-dk);
+  text-align: center;
+  line-height: 20px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 32px;
 }
 
 #text2 {
   margin-left: 15px;
+  color: var(--text-color-dk);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 32px;
 }
 
 #night-light {
@@ -88,4 +104,5 @@ input {
   margin-left: 450px;
   margin-top: 0;
   margin-bottom: 50px;
+  color: #2f3e53;
 }
