--- a/style.css
+++ b/style.css
@@ -135,3 +135,20 @@ input {
 label {
   color: var(--lgt-green-color);
 }
+
+#copy-btn-container {
+  display: flex;
+  justify-content: space-around;
+  margin-right: 65px;
+  margin-bottom: 30px;
+}
+
+.copy-btn {
+  background-color: var(--lgt-green-color);
+  width: 80px;
+  height: 42px;
+  font-size: 16px;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+}
